update delivery fix temp